kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-landing-page-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-landing-page
  template:
    metadata:
      labels:
        app: my-landing-page
    spec:
      containers:
        - name: my-landing-page-container
          image: luis122448/my-landing-page:latest
          ports:
            - containerPort: 4000
