kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-landing-page-frontend-service
  namespace: my-landing-page
spec:
  type: ClusterIP
  selector:
    app: my-landing-page
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
