kubernetes/http-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-landing-page-ingress
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: my-landing-page
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: luis122448-com-suite
spec:
  ingressClassName: nginx
  rules:
  - host: "luis122448.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-landing-page-service
            port:
              number: 4000
  - host: "www.luis122448.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-landing-page-service
            port:
              number: 4000
