kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-landing-page-frontend-ingress
  namespace: my-landing-page
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app.kubernetes.io/name: my-landing-page
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: luis122448-com-suite
spec:
  ingressClassName: nginx
  rules:
  - host: "luis122448.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-landing-page-frontend-service
            port:
              number: 4000
  - host: "www.luis122448.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-landing-page-frontend-service
            port:
              number: 4000
  tls:
  - hosts:
    - luis122448.com
    - www.luis122448.com
    secretName: luis122448-com-tls
